# steins-gate-old

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  VERSION  compile.sh  mxe.sh
cmake/Modules/: FindNPA.cmake
src/: exeaddress.hpp  main.c  main.cpp  nsbconstants.cpp  phone.cpp  phone.hpp  phonemode.hpp  phonemodeaddressbook.cpp  phonemodeaddressbook.hpp  phonemodedefaultoperatable.cpp  phonemodedefaultoperatable.hpp  phonemodemailmenu.cpp  phonemodemailmenu.hpp  phonemodereceivingmail.cpp  phonemodereceivingmail.hpp  phonemodesendmailedit.cpp  phonemodesendmailedit.hpp  phonesd.cpp  phonesd.hpp  sgexe.cpp  sgexe.hpp  sginterpreter.cpp  sginterpreter.hpp  sgresourcemgr.cpp  sgresourcemgr.hpp  steinsgate.cpp  steinsgate.hpp
